2007-10-03  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Create empty struct with field names.
	Include datenum in struct.
	
2007-10-02  David Bateman  <dbateman@free.fr>

	* miscellaneous/ls.m: If nargout return string array of files
	returned by ls.

2007-10-01  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Use %.15e instead of %.15g when setting
	range values.

2007-10-01  David Bateman  <dbateman@free.fr>

        * linear-algebra/norm.m: Inline the isvector(x) calculation for
	speed with small vectors.
	* pkg/pkg.m (archprefix): Set using octave_config_info("libexecdir") 
	rather than OCTAVE_HOME().

2007-09-30  Ben Abbott  <bpabbott@mac.com>

	* plot/findobj.m: New function.
	* plot/Makefile.m (SOURCES): Add it to SOURCES.

2007-09-26  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m: Add second argument to setting for prefix for
	architecture dependent files. Use throughout.
	(pkg:issuperuser): New function, use through to check for
	root user.
	(pkg:getarchprefix): function to give the archiecture dependent
	prefix for a package.
	(pkg:getarchdir): New function giving location of architetcure
	dependent directory. Use through out.
	(pkg:install): Treat architecture dependent directory separately
	as in might not be a sub-directory of the package directory.
	(pkg:uninstall): ditto.
	(pkg:create_pkgadddel): Check for global or local install for
	architecture dependent directory.
	(pkg:finish_installation): ditto.
	(pkg:write_INDEX): ditto.
	(pkg:load_packages_and_dependencies): ditto.
	(pkg:copy_files): ditto. Add step to copy architecture dependent
	files to a new location if user is root.
	(pkg:rm_rf): Check if file or directory exists before removing.
	(pkg:dirempty): Check if directory exists before checking.
	
	* plot/___patch__.m: Allow face colors to be passed as strings

	* plot/__plt_get_axis_arg__.m: Treat case of empty "varargin"
	needed for calls to "hold" without an argument.

2007-09-21  John W. Eaton  <jwe@octave.org>
